--- a/src/components/Graph.css
+++ b/src/components/Graph.css
@@ -1,5 +1,5 @@
 .ParentContainer{
-    margin-top:100px;
+    margin-top:10px;
     display: flex;
     justify-content: center;
 }
@@ -21,6 +21,10 @@
     flex-direction: column;
     margin-left: 50px;
     align-items: flex-start;
+    background-color: #F5F5F5;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 #year{
     width: 100px;
@@ -49,14 +53,7 @@
     font-size: 30px;
 }
 
-.notFound{
-    background-color: yellow;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
+
 
 .option{
     background-color: beige;
